# SORT_OF

./: .gitignore  CMakeLists.txt  README.md
include/sort_of/: sort_of.h
src/: demo.cpp
